H2 DB + 4 inserts